--- a/public/resources/partials/about.html
+++ b/public/resources/partials/about.html
@@ -1,2 +1,14 @@
 
-<div class="screen" id="about" name="#about" title="About"></div>
+<div class="screen" id="about" name="#about" title="About">
+  <div class="about-content parallax-container">
+    <div class="splash component">
+      <div class="splash-image vignette parallax-element" style="background-image: url(./resources/images/sunset.JPG);"></div>
+    </div>
+    <div class="about-text-container">
+      <h1 class="title-heading">canter</h1>
+      <div class="paragraph-content">
+        <p>Today's font choice is from Brooklyn based graphic designer Christopher J Lee. Canter is an all caps, condensed typeface available in five different weights, designed as a display type for titles, headlines, and posters.  Lee says, &quot;This was my first attempt using FontLab Studio, so please bear with me! All of the Canter weights are ready for download, just ask if you want a copy.&quot; If this is what he can create for his first attempt, we can't wait to see what he comes up with next.</p>
+      </div>
+    </div>
+  </div>
+</div>
