--- a/public/resources/partials/contact.html
+++ b/public/resources/partials/contact.html
@@ -2,6 +2,7 @@
 <div class="screen" id="contact" name="#contact" title="Contact">
     <script type="text/javascript">requirejs(["./resources/js/fancy-text-box.js"], function(){ })</script>
   <div class="contact-form">
+    <div class="contact-form-background"></div>
     <div class="contact-form-content">
       <form class="contact-form-form" action="contact-form.php">
           <div class="fancy-text-box">
