--- a/public/resources/partials/home.html
+++ b/public/resources/partials/home.html
@@ -1,7 +1,7 @@
 
 <div class="parallax-container screen" id="home" name="#home" title="Home">
   <div class="home-content-container parallax-element">
-    <h1 class="home-title-1">cadence</h1>
+    <h1 class="home-title-1">canter</h1>
   </div>
   <div class="home-background-content">
     <div class="home-background-content-darken"></div>
