--- a/src/components/fancy-text-area/fancy-text-area.scss
+++ b/src/components/fancy-text-area/fancy-text-area.scss
@@ -1,4 +1,7 @@
 .fancy-text-area{
+    position: relative;
+    width: 100%;
+    
     .fancy-text-area-input{
         width: 100%;
         height: 15em;
