--- a/src/layouts/page-layout.pug
+++ b/src/layouts/page-layout.pug
@@ -5,7 +5,7 @@ include ../util/include/include-script
 html
     head
         block title
-            title Cadence
+            title Canter
 
         meta(name="viewport" content="width=device-width, initial-scale=1")
         +include-css('./resources/css/styles.css')
