--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../layouts/page-layout
 
 block title
-    title Cadence
+    title Canter
 
 block pre-content
 
@@ -14,3 +14,7 @@ block content
         include ../components/examles/examples.pug
         include ../components/home/home.pug
         include ../components/about/about.pug
+    div(class="content-row")
+        include ../components/empty-screen/empty-screen.pug
+        include ../components/empty-screen/empty-screen.pug
+        include ../components/empty-screen/empty-screen.pug
