--- a/src/resources/sass/_fonts.scss
+++ b/src/resources/sass/_fonts.scss
@@ -1,8 +1,8 @@
 $open-sans: 'Open Sans', sans-serif;
-$roboto: 'Roboto', sans-serif;
-$ceasar: 'Caesar Dressing', cursive;
-$allerta: 'Allerta Stencil', sans-serif;
-$plaster: 'Plaster', cursive;
+// $roboto: 'Roboto', sans-serif;
+// $ceasar: 'Caesar Dressing', cursive;
+// $allerta: 'Allerta Stencil', sans-serif;
+// $plaster: 'Plaster', cursive;
 
 $canter-bold: 'CanterBold', sans-serif;
 $canter-bold-3d: 'CanterBold3D', sans-serif;
