--- a/public/resources/partials/contact-form.html
+++ b/public/resources/partials/contact-form.html
@@ -1,6 +1,7 @@
 
 <script type="text/javascript">requirejs(["./resources/js/fancy-text-box.js"], function(){ })</script>
 <div class="contact-form">
+  <div class="contact-form-background"></div>
   <div class="contact-form-content">
     <form class="contact-form-form" action="contact-form.php">
       <div class="fancy-text-box">
