--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,3 +1,37 @@
+@import "../../resources/sass/_fonts.scss";
+
 #about{
-    background-color: green;
+    position: relative;
+    display: flex;
+    justify-content: center;
+
+    h1{
+        margin: 0;
+    }
+
+    .about-content{
+        z-index: 2000;
+        margin-top: 10%;
+        height: 90%;
+        width: 80%;
+        overflow-y: scroll;
+
+        .splash{
+            height: 50%;
+        }
+
+        .about-text-container{
+            width: 100%;
+            height: 100em;
+
+            .title-heading, .paragraph-content > p{
+                color: white;
+            }
+
+            .paragraph-content{
+                text-align: left;
+            }
+        }
+    }
+
 }
