--- a/src/components/examles/examples.scss
+++ b/src/components/examles/examples.scss
@@ -1,3 +1,37 @@
-#examples{
-    background-color: blue;
-}
+// @import "../../resources/sass/_fonts.scss";
+//
+// #examples{
+//     position: relative;
+//     display: flex;
+//     justify-content: center;
+//
+//     h1{
+//         margin: 0;
+//     }
+//
+//     .examples-content{
+//         z-index: 2000;
+//         margin-top: 10%;
+//         height: 90%;
+//         width: 80%;
+//         overflow-y: scroll;
+//
+//         .splash{
+//             height: 50%;
+//         }
+//
+//         .example-text-container{
+//             width: 100%;
+//             height: 100em;
+//
+//             .title-heading, .paragraph-content > p{
+//                 color: white;
+//             }
+//
+//             .paragraph-content{
+//                 text-align: left;
+//             }
+//         }
+//     }
+//
+// }
