--- a/src/resources/sass/_font-imports.scss
+++ b/src/resources/sass/_font-imports.scss
@@ -1,8 +1,8 @@
 //Font imports go here
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400');
-@import url('https://fonts.googleapis.com/css?family=Caesar+Dressing');
-@import url('https://fonts.googleapis.com/css?family=Allerta+Stencil');
-@import url('https://fonts.googleapis.com/css?family=Plaster');
+// @import url('https://fonts.googleapis.com/css?family=Caesar+Dressing');
+// @import url('https://fonts.googleapis.com/css?family=Allerta+Stencil');
+// @import url('https://fonts.googleapis.com/css?family=Plaster');
 
 @font-face {
     font-family: CanterBold;
