--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -50,8 +50,13 @@ html, body{
     max-width: 100vw;
 }
 
-.random{
-    position: relative;
-    width: 100%;
-    height: 500em;
+.title-heading{
+    font-family: $canter-bold-strips;
+    opacity: 0.7;
+    letter-spacing: 0.3em;
+    font-size: 7em;
+}
+
+.paragraph-content{
+    font-family: $open-sans;
 }
