--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -108,6 +108,49 @@
         margin-bottom: 0.5em;
         font-size: 16pt; }
 
+#examples {
+  position: relative;
+  overflow: hidden; }
+  #examples .example-content {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-content: center;
+        -ms-flex-line-pack: center;
+            align-content: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    #examples .example-content .example-text-writer-container {
+      color: white;
+      -webkit-align-self: center;
+          -ms-flex-item-align: center;
+                  -ms-grid-row-align: center;
+              align-self: center; }
+    #examples .example-content .example-heading-group {
+      -webkit-align-self: center;
+          -ms-flex-item-align: center;
+                  -ms-grid-row-align: center;
+              align-self: center;
+      position: absolute; }
+      #examples .example-content .example-heading-group .example-heading {
+        display: inline-block; }
+        #examples .example-content .example-heading-group .example-heading.heading-bold {
+          font-family: "CanterBold", sans-serif; }
+        #examples .example-content .example-heading-group .example-heading.heading-striped {
+          font-family: "CanterBoldStrips", sans-serif; }
+        #examples .example-content .example-heading-group .example-heading.heading-3d {
+          font-family: "CanterBold3D", sans-serif; }
+        #examples .example-content .example-heading-group .example-heading.heading-shadow {
+          font-family: "CanterBoldShadow", sans-serif; }
+        #examples .example-content .example-heading-group .example-heading.heading-light {
+          font-family: "CanterLight", sans-serif; }
+        #examples .example-content .example-heading-group .example-heading.heading-outline {
+          font-family: "CanterOutline", sans-serif; }
 
 .fancy-text-area {
   position: relative;
@@ -415,3 +458,5 @@ html, body {
 
 .paragraph-content {
   font-family: "Open Sans", sans-serif; }
+  .paragraph-content p {
+    line-height: 2em; }
