--- a/src/components/examles/examples.scss
+++ b/src/components/examles/examples.scss
@@ -1,37 +1,51 @@
-// @import "../../resources/sass/_fonts.scss";
-//
-// #examples{
-//     position: relative;
-//     display: flex;
-//     justify-content: center;
-//
-//     h1{
-//         margin: 0;
-//     }
-//
-//     .examples-content{
-//         z-index: 2000;
-//         margin-top: 10%;
-//         height: 90%;
-//         width: 80%;
-//         overflow-y: scroll;
-//
-//         .splash{
-//             height: 50%;
-//         }
-//
-//         .example-text-container{
-//             width: 100%;
-//             height: 100em;
-//
-//             .title-heading, .paragraph-content > p{
-//                 color: white;
-//             }
-//
-//             .paragraph-content{
-//                 text-align: left;
-//             }
-//         }
-//     }
-//
-// }
+@import "../../resources/sass/_fonts.scss";
+
+#examples{
+    position: relative;
+    overflow: hidden;
+
+    .example-content{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+
+        .example-text-writer-container{
+            color: white;
+            align-self: center;
+
+            #example-text-writer{
+                
+            }
+        }
+
+        .example-heading-group{
+            align-self: center;
+            position: absolute;
+
+            .example-heading{
+                display: inline-block;
+                &.heading-bold{
+                    font-family: $canter-bold;
+                }
+                &.heading-striped{
+                    font-family: $canter-bold-strips;
+                }
+                &.heading-3d{
+                    font-family: $canter-bold-3d;
+                }
+                &.heading-shadow{
+                    font-family: $canter-bold-shadow;
+                }
+                &.heading-light{
+                    font-family: $canter-light;
+                }
+                &.heading-outline{
+                    font-family: $canter-outline;
+                }
+            }
+        }
+    }
+
+}
